--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "k3-rust-example"
+name = "k3-rust-example-hello-world"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 k3-wasm-macros = { version = "0.1.2", features = ["nightly"] }
 k3-wasm-sdk = "0.1.3"
-uuid = { version = "1.5.0", features = ["v4"] }
