--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-k3-wasm-macros = { version = "0.1.5", features = ["nightly"] }
-k3-wasm-sdk = "0.1.3"
-uuid = { version = "1.5.0", features = ["v4"] }
+k3-wasm-macros = { version = "0.1.7", features = ["nightly"] }
+k3-wasm-sdk = "0.1.12"
+reqwest = { version = "0.11.23", features = ["blocking"] }
