--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,4 @@ edition = "2021"
 
 [dependencies]
 k3-wasm-macros = { version = "0.1.7", features = ["nightly"] }
-k3-wasm-sdk = "0.1.12"
-reqwest = { version = "0.11.23" }
-wasm-bindgen-futures = "0.4.41"
+k3-wasm-sdk = "0.1.12" # 0.1.13 -> get_auth added
